--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
-  "editor.tabSize": 4,
-  "[javascript]": {
-    "editor.tabSize": 2
-  },
-  "[json]": {
-    "editor.tabSize": 2
-  },
-  "editor.insertSpaces": true
+  "editor.formatOnSave": true,
+  "editor.tabSize": 2,
+  "editor.insertSpaces": true,
+  "prettier.tabWidth": 2,
+  "prettier.trailingComma": "all", // "es5"
+  "prettier.singleQuote": true,
+  "prettier.printWidth": 200,
+  "prettier.semi": false, // true
 }
