--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "11.0.1",
+    "date-fns": "^2.27.0",
+    "gray-matter": "^4.0.3",
+    "next": "^11.1.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "remark": "^14.0.2",
+    "remark-html": "^15.0.1"
   }
 }
