--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "date-fns": "^2.27.0",
     "gray-matter": "^4.0.3",
+    "mdx-bundler": "^8.0.1",
     "next": "^11.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
