--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mdx-bundler": "^8.0.1",
     "next": "^11.1.3",
     "react": "17.0.2",
+    "react-calendly": "^2.2.2",
     "react-dom": "17.0.2",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
