--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-calendly": "^2.2.2",
     "react-dom": "17.0.2",
+    "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-mdx-images": "^1.0.3"
