--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "date-fns": "^2.27.0",
+    "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^8.0.1",
     "next": "^11.1.3",
+    "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-calendly": "^2.2.2",
     "react-dom": "17.0.2",
