fix: contact form backend

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "date-fns": "^2.27.0",
     "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
