--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^8.0.1",
     "next": "^11.1.3",
+    "node": "^18.17.1",
     "nodemailer": "^6.7.2",
     "react": "17.0.2",
     "react-calendly": "^2.2.2",
