--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "formidable": "^2.0.1",
     "gray-matter": "^4.0.3",
     "mdx-bundler": "^8.0.1",
-    "next": "^11.1.3",
-    "node": "^18.17.1",
+    "next": "^13.4.19",
+    "node": "18.x",
     "nodemailer": "^6.7.2",
-    "react": "17.0.2",
-    "react-calendly": "^2.2.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-calendly": "latest",
+    "react-dom": "18.2.0",
+    "react-scripts": "^2.1.3",
     "reading-time": "^1.5.0",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1",
     "remark-mdx-images": "^1.0.3"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
