--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "debug": "NODE_OPTIONS='--openssl-legacy-provider' next dev -p 5000"
   },
   "dependencies": {
     "cors": "^2.8.5",
